GNOME Bugzilla – Bug 725948
videomixer2: crash after renegotiating with different resolution
Last modified: 2014-03-11 16:05:58 UTC
Created attachment 271327 [details] Small test triggering the crash The attached small test program crashes quite fast as-is, but works when the line using the ximagesrc element is commented out.
It seems that an internally queued buffer from an old caps is being used as if it had the new caps from ximagesrc that is usually different from the others.
Created attachment 271502 [details] [review] videomixer2: store video info with buffers to keep it in sync Instead the queued buffer might have an old caps while the pad is already storing the information for a new caps. Mixing those while handling buffers will often lead to issues
commit 373eceef7c6f5e2e113ef8e2703535c2a2280dce Author: Thiago Santos <ts.santos@sisa.samsung.com> Date: Tue Mar 11 00:46:06 2014 -0300 videomixer2: store video info with buffers to keep it in sync Instead the queued buffer might have an old caps while the pad is already storing the information for a new caps. Mixing those while handling buffers will often lead to issues https://bugzilla.gnome.org/show_bug.cgi?id=725948